academic program validation spacing issues, Insight thumbnail height issues

--- a/themes/custom/athena/assets/styles/style.scss
+++ b/themes/custom/athena/assets/styles/style.scss
@@ -61,6 +61,7 @@ img {
 }
 
 .insight-thumbnail {
+    width: 100%;
     max-height: 100px;
     overflow: hidden;
  }
